--- a/css/backgroundImage.css
+++ b/css/backgroundImage.css
@@ -1,7 +1,7 @@
 .element {
     resize: both;
     overflow: auto;
-    background-image: url("../images/marble-background.jpg");
+    background-image: url("../images/yellowhearts.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: repeat-y;
